--- a/index.ipynb
+++ b/index.ipynb
@@ -35,7 +35,7 @@
     "| 08/10| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | [Tipos Abstratos de Dados (TAD)](aula-10.ipynb) |\n",
     "| 13/10| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | [TAD para Vetores e Matrizes](aula-12.ipynb) |\n",
     "| 13/10| Estruturas de dados heterogêneas: Definição, declaração, preenchimento e acesso de registros de dados (structs) | [Manipulação de arquivos](aula-13.ipynb) |\n",
-    "| 15/10| PROVA 5 | [Estruturas de dados heterogêneas e homogêneas](prova.ipynb) |\n",
+    "| 15/10| PROVA 5 | [Estruturas de dados heterogêneas e homogêneas](prova5.ipynb) |\n",
     "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
     "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; | \n",
     "| --/--| Desenvolvimento de programa: Processos de Desenvolvimento de Software; Controle de Versão de Código; |\n",
